{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 44,
  "lineage": "128d1967-fce4-caa5-6c40-92af8a098b75",
  "resources": [
    {
      "module": "module.kubeedge",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "kubeedge_cloudcore",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20211206",
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/edge-benchmark/zones/us-central1-a/disks/cloudcore"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/edge-benchmark/zones/us-central1-a/instances/cloudcore",
            "instance_id": "4571099061721220116",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "akshay:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDrb10XpX4qmCaGDFXpD/IwINIqhtN6f/givLNcyJtxawYeY7AqrV6YwBbq1n12OTVNBDG5u0WoPT+aF3UUIKZ5WqBP4f1Jo78FMn7LclqOZ6p8D60hWjiHqhvbdjn05xN22+DJE128+E7mj8kCZ20bpKoCFBE6Dt9GT+BjODbNIAP31vJt7DrPPL29kLg92PyA14LsY1xXGxJbF6q/K93/d0QCgjs69PvckQiFlNig7xW8QVG40rpGH7qtHvAXvwmTupUiJUU/Ny33fGrfjdqxmx6dQzmhIZQHYRA0rio7AP5/OPbp58X1tYRBr6EIhWpJEPOOLkmll7UWzN+zJwZfwT18NKXr9gC2eRy92HtVjEacEwVV54p6j200tg5FbhKCvTjetSWLw2l8/APXLwziqDAMTkd62CU11QHMQv3adQ [...]
            },
            "metadata_fingerprint": "OkQ0hpc7VUI=",
            "metadata_startup_script": "#!/bin/bash\n\nset -x\nexec \u003e \u003e(tee /var/log/user-data.log|logger -t user-data ) 2\u003e\u00261\n\n# Letting iptables see bridged traffic\ncat \u003c\u003cEOF | tee /etc/sysctl.d/k8s.conf\nnet.bridge.bridge-nf-call-ip6tables = 1\nnet.bridge.bridge-nf-call-iptables = 1\nEOF\nsysctl --system\n\n# Installing Docker\napt-get update\n\napt-get install -y \\\n    apt-transport-https \\\n    ca-certificates \\\n    curl \\\n    gnupg-agent \\\n    softw [...]
            "name": "cloudcore",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.71.112.122",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/edge-benchmark/global/networks/kubeedge-infra",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/edge-benchmark/regions/us-central1/subnetworks/subnetwork-1",
                "subnetwork_project": "edge-benchmark"
              }
            ],
            "project": "edge-benchmark",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/edge-benchmark/zones/us-central1-a/instances/cloudcore",
            "service_account": [
              {
                "email": "870520033135-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.config_bucket.google_storage_bucket.config_bucket",
            "module.kubeedge.data.google_compute_image.ubuntu",
            "module.kubeedge.data.template_file.cloudcore_init",
            "module.kubeedge.random_string.token_part_1",
            "module.kubeedge.random_string.token_part_2",
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_subnetwork.subnetwork_1"
          ]
        }
      ]
    },
    {
      "module": "module.kubeedge",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "kubeedge_edgecore",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20211206",
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/edge-benchmark/zones/us-central1-a/disks/edgecore-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/edge-benchmark/zones/us-central1-a/instances/edgecore-0",
            "instance_id": "5767842916513072637",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "akshay:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDrb10XpX4qmCaGDFXpD/IwINIqhtN6f/givLNcyJtxawYeY7AqrV6YwBbq1n12OTVNBDG5u0WoPT+aF3UUIKZ5WqBP4f1Jo78FMn7LclqOZ6p8D60hWjiHqhvbdjn05xN22+DJE128+E7mj8kCZ20bpKoCFBE6Dt9GT+BjODbNIAP31vJt7DrPPL29kLg92PyA14LsY1xXGxJbF6q/K93/d0QCgjs69PvckQiFlNig7xW8QVG40rpGH7qtHvAXvwmTupUiJUU/Ny33fGrfjdqxmx6dQzmhIZQHYRA0rio7AP5/OPbp58X1tYRBr6EIhWpJEPOOLkmll7UWzN+zJwZfwT18NKXr9gC2eRy92HtVjEacEwVV54p6j200tg5FbhKCvTjetSWLw2l8/APXLwziqDAMTkd62CU11QHMQv3adQ [...]
            },
            "metadata_fingerprint": "kJCFt86SP78=",
            "metadata_startup_script": "#!/bin/bash\n\nset -x\n\nexec \u003e \u003e(tee /var/log/user-data.log|logger -t user-data ) 2\u003e\u00261\n\n# Installing Docker\napt-get update\n\napt-get install -y \\\n    apt-transport-https \\\n    ca-certificates \\\n    curl \\\n    gnupg-agent \\\n    software-properties-common\n\ncurl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -\n\nadd-apt-repository \\\n   \"deb [arch=amd64] https://download.docker.com/linux/ubuntu \\\n    [...]
            "name": "edgecore-0",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/edge-benchmark/global/networks/kubeedge-infra",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/edge-benchmark/regions/us-central1/subnetworks/subnetwork-1",
                "subnetwork_project": "edge-benchmark"
              }
            ],
            "project": "edge-benchmark",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/edge-benchmark/zones/us-central1-a/instances/edgecore-0",
            "service_account": [
              {
                "email": "870520033135-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.config_bucket.google_storage_bucket.config_bucket",
            "module.kubeedge.data.google_compute_image.ubuntu",
            "module.kubeedge.data.template_file.cloudcore_init",
            "module.kubeedge.data.template_file.edgecore_init",
            "module.kubeedge.google_compute_instance.kubeedge_cloudcore",
            "module.kubeedge.random_string.token_part_1",
            "module.kubeedge.random_string.token_part_2",
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_subnetwork.subnetwork_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-12-06T13:04:36.806-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/edge-benchmark/global/firewalls/kubeedge-infra-allow-all-egress",
            "log_config": [],
            "name": "kubeedge-infra-allow-all-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/edge-benchmark/global/networks/kubeedge-infra",
            "priority": 1000,
            "project": "edge-benchmark",
            "self_link": "https://www.googleapis.com/compute/v1/projects/edge-benchmark/global/firewalls/kubeedge-infra-allow-all-egress",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_all_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-12-06T13:04:36.971-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/edge-benchmark/global/firewalls/kubeedge-infra-allow-all-ingress",
            "log_config": [],
            "name": "kubeedge-infra-allow-all-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/edge-benchmark/global/networks/kubeedge-infra",
            "priority": 1000,
            "project": "edge-benchmark",
            "self_link": "https://www.googleapis.com/compute/v1/projects/edge-benchmark/global/firewalls/kubeedge-infra-allow-all-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/edge-benchmark/global/networks/kubeedge-infra",
            "mtu": 0,
            "name": "kubeedge-infra",
            "project": "edge-benchmark",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/edge-benchmark/global/networks/kubeedge-infra"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-12-06T13:04:37.309-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/edge-benchmark/regions/us-central1/subnetworks/subnetwork-1",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "subnetwork-1",
            "network": "https://www.googleapis.com/compute/v1/projects/edge-benchmark/global/networks/kubeedge-infra",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "edge-benchmark",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/edge-benchmark/regions/us-central1/subnetworks/subnetwork-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}